--- a/client/src/index.html
+++ b/client/src/index.html
@@ -32,7 +32,7 @@
                             <div class="card-header-title">Películas</div>
                             <div class="card-header-actions">
                                 <button class="button is-small" id="addMovieBtn">Agregar</button>
-                                <button class="button is-small">Editar</button>
+                                <button class="button is-small has-background-grey-lighter">Editar</button>
                                 <button class="button is-small">Eliminar</button>
                             </div>
                         </header>
