Cambio peliculas por movies

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -29,7 +29,7 @@
 
                     <div class="card">
                         <header class="card-header">
-                            <div class="card-header-title">Películas</div>
+                            <div class="card-header-title">Movies</div>
                             <div class="card-header-actions">
                                 <button class="button is-small" id="addMovieBtn">Agregar</button>
                                 <button class="button is-small">Editar</button>
